<resources>
    <string name="app_name">prowling</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Your Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_repeatpassword">Repeat Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email no valido</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
